This is the code for my Instagramm Feed Project 1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </p>
         <p>This photo shows Miami, a city which is completely new for me. Nontheless Miami seems to be beautiful if you
             manage to go to the right places and get to know new people to share your new memories and experiences in
-            Life </p>
+            Life. </p>
     </div>
 </body>
 
