This is hopefully closly my final code

--- a/index.html
+++ b/index.html
@@ -8,25 +8,21 @@
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
         integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
-        
-    </head>
-    
-    <body>
-   
-        <div id="outline">
-        <nav  class="fitbetter">
+
+</head>
+
+<body>
+
+    <div id="outline">
+        <div class="fitbetter">
             <img id="HTMLpicture" src="https://image.freepik.com/free-icon/html-file-with-code-symbol_318-45756.jpg">
             <div id="headtext">
-                <div>
-
-                    <h5>HTML5 </h5>
-                    <p>Rigoberto</p>
-                </div>
-                <div> <img id="threedots"
-                        src="https://www.iconbolt.com/preview/facebook/bootstrap-icons/three-dots-vertical.svg">
-                </div>
+                <h5>HTML5 </h5>
+                <p>Rigoberto</p>   
             </div>
-        </nav>
+            <img id="threedots"
+                src="https://www.iconbolt.com/preview/facebook/bootstrap-icons/three-dots-vertical.svg">
+        </div>
         <div class="body">
 
             <i class="fa-thin fa-album-collection"></i>
@@ -50,7 +46,7 @@
                 manage to go to the right places and get to know new people to share your new memories and experiences
                 in
                 Life. </p>
-    </div>
+        </div>
     </div>
 </body>
 
