I added twwo br elements

--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
             <img id="HTMLpicture" src="https://image.freepik.com/free-icon/html-file-with-code-symbol_318-45756.jpg">
             <div id="headtext">
                 <h5>HTML5 </h5>
-                <p>Rigoberto</p>   
+                <p>Rigoberto</p>
             </div>
-            <img id="threedots"
-                src="https://www.iconbolt.com/preview/facebook/bootstrap-icons/three-dots-vertical.svg">
+            <img id="threedots" src="https://www.iconbolt.com/preview/facebook/bootstrap-icons/three-dots-vertical.svg">
         </div>
         <div class="body">
-
             <i class="fa-thin fa-album-collection"></i>
 
 
@@ -38,6 +36,8 @@
             </div>
             <img id="right"
                 src="https://th.bing.com/th/id/R.3bd8177d81331d65b573ab3b0e03f741?rik=0Vvvpuw3n3DOPw&pid=ImgRaw&r=0">
+            <br>
+            <br>
             <p>
                 Liked by <strong>4GeeksAcademy, html5, Web </strong> and <strong>100,000 others </strong>
             </p>
